# skill-monster-scanner

./: .gitignore  .projenrc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pyproject.toml  release-please-config.json  setup.py  skill.json
.github/workflows/: license_tests.yml  release-build.yml  skill_tests.yml  unit-tests.yml  update-skill-json.yml
.github/workflows/scripts/: update_skill_json.py
requirements/: requirements-dev.txt
skill_monster_scanner/: __init__.py  settingsmeta.yaml  version.py
skill_monster_scanner/locale/da-dk/: skill.json
skill_monster_scanner/locale/da-dk/dialog/: monsters.dialog  no_monsters.dialog
skill_monster_scanner/locale/da-dk/intents/: monsters.voc  search.voc
skill_monster_scanner/locale/en-us/: skill.json
skill_monster_scanner/locale/en-us/dialog/: monsters.dialog  no_monsters.dialog
skill_monster_scanner/locale/en-us/intents/: monsters.voc  search.voc
skill_monster_scanner/locale/fr-fr/: skill.json
skill_monster_scanner/locale/fr-fr/dialog/: monsters.dialog  no_monsters.dialog
skill_monster_scanner/locale/fr-fr/intents/: bed.voc  monsters.voc  search.voc  under.voc
skill_monster_scanner/locale/sv-se/: skill.json
skill_monster_scanner/locale/sv-se/dialog/: monsters.dialog  no_monsters.dialog
skill_monster_scanner/locale/sv-se/intents/: bed.voc  monsters.voc  search.voc
skill_monster_scanner/requirements/: requirements-dev.txt
test/: test_intents.yaml  test_resources.yaml  test_skill.py
